# where-rust-shines

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  generate-task.sh
advanced/: README.md
planning/: NOTES.md  schema.md
tasks/atomic/: README.md
tasks/atomic/java/: pom.xml
tasks/atomic/rust/: Cargo.toml
tasks/atomic/rust/src/: main.rs
tasks/divisible/java/: pom.xml
tasks/divisible/rust/: Cargo.toml
tasks/happy/java/: pom.xml
tasks/happy/rust/: Cargo.toml
tasks/happy/rust/src/: main.rs
tasks/mutex/: README.md
tasks/mutex/java/: pom.xml
tasks/mutex/rust/: Cargo.toml
tasks/mutex/rust/src/: main.rs
tasks/npe/: README.md
tasks/npe/java/: README.md  pom.xml
tasks/npe/rust/: Cargo.toml
tasks/npe/rust/src/: main.rs
tasks/optionsaregreat/: readme.md
tasks/optionsaregreat/java/: pom.xml
tasks/optionsaregreat/rust/: Cargo.toml
tasks/optionsaregreat/rust/src/: main.rs
tasks/ownership/: readme.md
tasks/ownership/java/: pom.xml
tasks/ownership/rust/: Cargo.toml
tasks/ownership/rust/src/: main.rs
tasks/passby/: readme.md
tasks/passby/java/: pom.xml
tasks/passby/rust/: Cargo.toml
tasks/passby/rust/src/: main.rs
tasks/rc/: README.md
tasks/rc/java/: pom.xml
tasks/rc/rust/: Cargo.toml
tasks/rc/rust/src/: main.rs
tasks/snakev1/: readme.md
tasks/snakev1/java/: pom.xml
tasks/snakev1/rust/: Cargo.toml
tasks/snakev1/rust/src/: main.rs  maputil.rs  messages.rs  snake.rs  structs.rs  util.rs
tasks/syntax/: readme.md
tasks/syntax/java/: pom.xml
tasks/syntax/rust/: Cargo.toml
(+28 files in other folders)
